--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
 }
 
 .logo h1 {
-    color:blue;
+    color:black;
 }
 
 .nav-list {
@@ -39,4 +39,66 @@ header {
     font-size: 1.15rem;
     color:brown;
     font-weight: 400;
+}
+
+.login-button button {
+    border:none;
+    padding:10px 15px;
+    border-radius: 5px;
+    background-color: rgb(219, 8, 113);
+}
+
+.login-button a {
+    text-decoration: none;
+    color:black;
+    font-weight:500;
+    font-size:1.1rem;
+}
+
+.mobile-menu-icon {
+    display:none;
+}
+
+.mobile-menu {
+    display: none;
+}
+
+@media screen and (max-width:730px){
+    .nav-bar{
+        padding: 1.5rem 4rem;
+    }
+    .nav-item{
+        display: none;
+    }
+    .login-button{
+        display: none;
+    }
+    .mobile-menu-icon {
+        display: block;
+    }
+    .mobile-menu-icon button {
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+    }
+    .mobile-menu ul{
+        display:flex;
+        flex-direction: column;
+        text-align: center;
+        padding-bottom: 1rem;
+    }
+    .mobile-menu .nav-item{
+        display:block;
+        padding-top: 1.2rem;
+    }
+    .mobile-menu .login-button {
+        display:block;
+        padding:1rem 2rem;
+    }
+    .mobile-menu .login-button button {
+        width: 100%;
+    }
+    .open {
+        display: block;
+    }
 }
